# functional-commitment

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
ac2ft/: Cargo.toml
ac2ft/src/: example_circuits.rs  lib.rs
ac2tft/: Cargo.toml  matrices.txt
ac2tft/src/: error.rs  example_circuits.rs  lib.rs  tests.rs
ac_compiler/: Cargo.toml
ac_compiler/src/: constraint_builder.rs  error.rs  lib.rs  tests.rs  variable.rs
fiat_shamir_rng/: Cargo.toml
fiat_shamir_rng/src/: lib.rs
functional_commitment/: Cargo.toml
functional_commitment/src/: lib.rs  test_circuits.rs  tests.rs
homomorphic_poly_commit/: Cargo.toml
homomorphic_poly_commit/src/: error.rs  kzg10.rs  lib.rs  marlin_kzg.rs  sonic_kzg.rs
index_private_marlin/: Cargo.toml
index_private_marlin/src/: data_structures.rs  error.rs  lib.rs  rational_sumcheck_vo.rs  test.rs  well_formation.rs
index_private_marlin/src/ahp/: constraint_systems.rs  indexer.rs  mod.rs  prover.rs  verifier.rs
new_ac_compiler/: Cargo.toml
new_ac_compiler/src/: circuit.rs  circuit_compiler.rs  constraint_builder.rs  constraint_syntesizer.rs  example_circuits.rs  gate.rs  lib.rs  tests.rs  variable.rs
new_marlin/: Cargo.toml
new_marlin/src/: data_structures.rs  lib.rs  well_formation.rs
new_marlin/src/ahp/: constraint_systems.rs  indexer.rs  mod.rs  prover.rs  verifier.rs
proof_of_function_relation/: Cargo.toml
proof_of_function_relation/src/: commitment.rs  error.rs  lib.rs  transcript.rs  util.rs  virtual_oracle.rs
proof_of_function_relation/src/discrete_log_comparison/: mod.rs  proof.rs  tests.rs
proof_of_function_relation/src/discrete_log_comparison/piop/: mod.rs  prover.rs
proof_of_function_relation/src/errors/: lib.rs  mod.rs  zero_over_k.rs
proof_of_function_relation/src/geo_seq/: mod.rs  proof.rs  tests.rs
proof_of_function_relation/src/non_zero_over_k/: errors.rs  mod.rs  proof.rs  tests.rs
proof_of_function_relation/src/non_zero_over_k/piop/: mod.rs  prover.rs
proof_of_function_relation/src/subset_over_k/: mod.rs  proof.rs
proof_of_function_relation/src/t_diag/: mod.rs  proof.rs  tests.rs
proof_of_function_relation/src/t_diag/piop/: mod.rs
proof_of_function_relation/src/t_ft/: mod.rs  proof.rs  tests.rs
proof_of_function_relation/src/t_functional_triple/: errors.rs  mod.rs  proof.rs  tests.rs
proof_of_function_relation/src/t_strictly_lower_triangular_test/: mod.rs  proof.rs  tests.rs
proof_of_function_relation/src/virtual_oracle/: add_vo.rs  eq_vo.rs  geometric_sequence_vo.rs  inverse_check_oracle.rs  mod.rs  new_vo.rs  normalized_vo.rs  prod_vo.rs  product_check_oracle.rs  square_check_oracle.rs
proof_of_function_relation/src/virtual_oracle/generic_shifting_vo/: mod.rs  presets.rs  tests.rs  vo_term.rs
proof_of_function_relation/src/virtual_oracle/new_vo/: mod.rs  presets.rs  tests.rs  useful_vo_functions.rs  vo_term.rs
proof_of_function_relation/src/zero_over_k/: errors.rs  mod.rs  proof.rs  tests.rs
proof_of_function_relation/src/zero_over_k/piop/: mod.rs  prover.rs  verifier.rs
zero_over_k/: Cargo.toml
zero_over_k/src/: commitment.rs  error.rs  lib.rs  util.rs
zero_over_k/src/virtual_oracle/: add_vo.rs  mod.rs
zero_over_k/src/virtual_oracle/generic_shifting_vo/: mod.rs  tests.rs
zero_over_k/src/zero_over_k/: mod.rs  proof.rs  tests.rs
zero_over_k/src/zero_over_k/piop/: mod.rs  prover.rs  verifier.rs
