[package]
name = "ac2tft"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ff = "0.3.0"
ark-bn254 = "0.3.0"
ark-poly = "0.3.0"
ark-poly-commit = "0.3.0"
ark-relations = "0.3.0"
ark-std = "0.3.0"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
rand = "0.8.4"
blake2 = { version = "0.9", default-features = false }

ark-ec = "0.3.0"
ark-serialize = "0.3.0"
digest = { version = "0.9" }

[dev-dependencies]
holographic-lincheck = { path = "../../holographic-lincheck", version = "0.1.0" }
proof_of_function_relation = { path = "../proof_of_function_relation" }
ark-marlin = "0.3.0"
