[package]
name = "ac_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-poly-commit = "0.3.0"
ark-relations = "0.3.0"
ark-std = "0.3.0"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
rand = "0.8.4"

ark-ec = "0.3.0"
ark-serialize = "0.3.0"
digest = { version = "0.9" }

[dev-dependencies]
proof_of_function_relation = { path = "../proof_of_function_relation" }
# index_private_marlin = { path = "../index_private_marlin" }
ark-marlin = "0.3.0"
ark-bn254 = "0.3.0"
blake2 = { version = "0.9", default-features = false }
homomorphic_poly_commit = { path = "../homomorphic_poly_commit" }
fiat_shamir_rng = { path = "../fiat_shamir_rng"}
rand_chacha = { version = "0.3.0", default-features = false }
