[package]
name = "homomorphic_poly_commit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly-commit = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = "0.3.0"
ark-std = "0.3.0"
ark-marlin = "0.3.0"
ark-serialize = "0.3.0"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
ark-bn254 = "0.3.0"
rand = "0.8.4"