[package]
name = "proof_of_function_relation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly-commit = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = "0.3.0"
ark-std = "0.3.0"
ark-serialize = "0.3.0"
ark-bls12-381 = "0.3.0"
merlin = { version = "3.0", default-features = false }
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
ark-bn254 = "0.3.0"
rand = "0.8.4"
